--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -54,6 +54,9 @@ dependencies:
   flutter_animated_dialog: ^2.0.1
   share: ^2.0.4
   intl: ^0.18.1
+  firebase_messaging: ^14.6.4
+  provider: ^6.0.5
+  http: ^1.1.0
 
 dev_dependencies:
   flutter_test:
