progress indicator issue resolved

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,7 +41,7 @@ dependencies:
   flutter_native_splash: ^2.2.16
   firebase_core: ^2.13.0
   firebase_auth: ^4.6.1
-  cloud_firestore: ^4.7.1
+  cloud_firestore: ^4.8.3
   firebase_storage: ^11.2.2
   animated_text_kit: ^4.2.2
   image_picker: ^0.8.7+5
@@ -54,10 +54,11 @@ dependencies:
   flutter_animated_dialog: ^2.0.1
   share: ^2.0.4
   intl: ^0.18.1
-  firebase_messaging: ^14.6.4
+  firebase_messaging: ^14.6.5
   provider: ^6.0.5
   http: ^1.1.0
   shimmer: ^3.0.0
+  app_settings: ^5.0.0
 
 dev_dependencies:
   flutter_test:
