--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -2,6 +2,7 @@
     package="com.example.insta_clone">
 
    <application
+        android:allowBackup="false"
         android:label="Instagram"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
